error.txt
   Compiling fhn v0.1.0 (/home/antoine/Documents/fhn)
warning: unused import: `ndarray::Array1`
 --> src/models/neuron.rs:2:5
  |
2 | use ndarray::Array1;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0507]: cannot move out of index of `Vec<NeuronState>`
  --> src/simulations/forward.rs:30:24
   |
30 |             let prev = traj[t - 1];
   |                        ^^^^^^^^^^^ move occurs because value has type `NeuronState`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
30 |             let prev = &traj[t - 1];
   |                        +
help: consider cloning the value if the performance cost is acceptable
   |
30 |             let prev = traj[t - 1].clone();
   |                                   ++++++++

For more information about this error, try `rustc --explain E0507`.
warning: `fhn` (lib) generated 1 warning
error: could not compile `fhn` (lib) due to 1 previous error; 1 warning emitted
